# Azure-Pipeline

./: CMakeLists.txt  azure-pipelines.yml
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_math.cpp
